# backend/src/main/kotlin/wtf/ndu/vibin/routes/FavoriteRoutes.kt
@@ -3,6 +3,7 @@ package wtf.ndu.vibin.routes
 import io.ktor.server.application.Application
 import io.ktor.server.auth.authenticate
 import io.ktor.server.response.respond
+import io.ktor.server.routing.RoutingCall
 import io.ktor.server.routing.routing
 import wtf.ndu.vibin.db.FavoriteType
 import wtf.ndu.vibin.permissions.PermissionType
@@ -10,6 +11,19 @@ import wtf.ndu.vibin.repos.FavoriteRepo
 
 fun Application.configureFavoriteRoutes() = routing {
     authenticate("tokenAuth") {
+
+        suspend fun RoutingCall.getFavoriteType(): FavoriteType? {
+            val entityTypeParam = this.parameters["entityType"] ?: return null
+
+            return when (entityTypeParam.lowercase()) {
+                "track" -> FavoriteType.TRACK
+                "album" -> FavoriteType.ALBUM
+                "artist" -> FavoriteType.ARTIST
+                else -> null.also {
+                    this.invalidParameter("entityType", "track", "album", "artist")
+                }
+            }
+        }
 
         getP("/api/favorites/{userId}", PermissionType.VIEW_USERS) {
 
@@ -23,19 +37,13 @@ fun Application.configureFavoriteRoutes() = routing {
         putP("/api/favorites/{entityType}/{place}", PermissionType.MANAGE_OWN_USER) {
 
             val userId = call.getUserId() ?: return@putP call.unauthorized()
-            val entityTypeParam = call.parameters["entityType"] ?: return@putP call.missingParameter("entityType")
             val entityId = call.parameters["entityId"]?.toLongOrNull() ?: return@putP call.missingParameter("entityId")
             val place = call.parameters["place"]?.toIntOrNull() ?: return@putP call.missingParameter("place")
 
             if (place !in 1..3)
                 return@putP call.invalidParameter("place", "1", "2", "3")
 
-            val entityType = when (entityTypeParam.lowercase()) {
-                "track" -> FavoriteType.TRACK
-                "album" -> FavoriteType.ALBUM
-                "artist" -> FavoriteType.ARTIST
-                else -> return@putP call.invalidParameter("entityType", "track", "album", "artist")
-            }
+            val entityType = call.getFavoriteType() ?: return@putP
 
             FavoriteRepo.addFavorite(userId, entityType, entityId, place)
 
@@ -45,22 +53,29 @@ fun Application.configureFavoriteRoutes() = routing {
         deleteP("/api/favorites/{entityType}/{place}", PermissionType.MANAGE_OWN_USER) {
 
             val userId = call.getUserId() ?: return@deleteP call.unauthorized()
-            val entityTypeParam = call.parameters["entityType"] ?: return@deleteP call.missingParameter("entityType")
             val place = call.parameters["place"]?.toIntOrNull() ?: return@deleteP call.missingParameter("place")
 
             if (place !in 1..3)
                 return@deleteP call.invalidParameter("place", "1", "2", "3")
 
-            val entityType = when (entityTypeParam.lowercase()) {
-                "track" -> FavoriteType.TRACK
-                "album" -> FavoriteType.ALBUM
-                "artist" -> FavoriteType.ARTIST
-                else -> return@deleteP call.invalidParameter("entityType", "track", "album", "artist")
-            }
+            val entityType = call.getFavoriteType() ?: return@deleteP
 
             FavoriteRepo.deleteFavoriteAtPlace(userId, entityType, place)
 
             call.success()
+        }
+
+        getP("/api/favorites/{entityType}/check/{entityId}", PermissionType.VIEW_USERS) {
+
+            val userId = call.getUserId() ?: return@getP call.unauthorized()
+
+            val entityId = call.parameters["entityId"]?.toLongOrNull() ?: return@getP call.missingParameter("entityId")
+
+            val entityType = call.getFavoriteType() ?: return@getP
+
+            val isFavorite = FavoriteRepo.isFavorite(userId, entityType, entityId)
+
+            call.success(isFavorite)
         }
     }
 }
